fix overflow in content-component

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -42,7 +42,7 @@
 
 
 .board-content-component {
-  padding: 0 0 2.5rem 2.5rem;
+  padding: 0 0 2.5rem 2.3rem;
   overflow-x: auto;
   // position: relative;
   height: 100%;
